# Exame

./: README.md
ExameFinal/: CMakeLists.txt  extra.cpp  main.cpp  verificacoes.cpp  verificacoes.h
ExameFinal/Dados/: Lista_Ordens.txt  ativos.txt  departamentos.txt  ordem_tecnico.txt  ordens.txt  ordens_fim.txt  tecnicos.txt  tempo_ordem.txt
ExameFinal/Departamentos/: departamentos.cpp  departamentos.h
ExameFinal/Equipamentos/: Equipamentos.cpp  Equipamentos.h
ExameFinal/Ler/Departamentos/: leitura_departamentos.cpp  leitura_departamentos.h
ExameFinal/Ler/Equipamentos/: leitura_equipamentos.cpp  leitura_equipamentos.h
ExameFinal/Ler/Ordens/: leitura_ordens.cpp  leitura_ordens.h
ExameFinal/Ler/Tecnicos/: leitura_tecnicos.cpp  leitura_tecnicos.h
ExameFinal/Listagem/Departamentos/: leitura_departamentos.cpp  leitura_departamentos.h
ExameFinal/Listagem/Equipamentos/: leitura_equipamentos.cpp  leitura_equipamentos.h
ExameFinal/Listagem/Ordens/: leitura_ordens.cpp  leitura_ordens.h
ExameFinal/Listagem/Tecnicos/: leitura_tecnicos.cpp  leitura_tecnicos.h
ExameFinal/Logs/Funcoes/: Logs.cpp  Logs.h
ExameFinal/Menus/Menu relatórios/: menus_administracao.cpp  menus_administracao.h
ExameFinal/Menus/Menus Departamentos/: menu_departamentos.cpp  menu_departamentos.h
ExameFinal/Menus/Menus Equipamentos/: menus_equipamentos.cpp  menus_equipamentos.h
ExameFinal/Menus/Menus Gerais/: menus.cpp  menus.h
ExameFinal/Menus/Menus Ordens/: menu_ordens.cpp  menu_ordens.h
ExameFinal/Menus/Menus Tecnicos/: menus_tecnicos.cpp  menus_tecnicos.h
ExameFinal/Ordens de Manutenção/: ordens.cpp  ordens.h
ExameFinal/Outros/Extra/: extra.cpp  extra.h
ExameFinal/Outros/Verificações/: verificacoes.cpp  verificacoes.h
ExameFinal/Tecnicos/: tecnico.cpp  tecnico.h
ExameFinal/data/: constantes.h  enumeracoes.h  structs.h
